@@ -4,6 +4,7 @@ Development Progress	:
 ---------------------------
 
 2011-12-01 (SVN):
+    * engine/hexenworld/shared/net_wins.c: Renamed to net_udp.c.
     * engine/hexenworld/shared/net_chan.c (Netchan_Setup): pre-initialize
       chan->incoming_sequence to -1 so a packet with an incoming sequence
       of 0 will work. Patch found in old quakeforge cvs commits.
